Updated Loading Screen

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class='loading-container'>
-        <img src='/static/imgs/loadingScreen/LOADING-SurfaceImperfection6-min.png'>
+        <img src='/static/imgs/loadingScreen/6.jpg'>
         <div class='load-bar-container'>
             <div class='load-snippets'>
             <p class='load-texts'>Carregando</p>
