Added Warnign bg

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     </div>
     <div class='loading-container'>
         <img src='/static/imgs/loadingScreen/6.jpg'>
+        <img class='img-warning hide' src='/static/imgs/loadingScreen/warning-min.png'>
         <div class='load-bar-container'>
             <div class='load-snippets'>
             <p class='load-texts'>Carregando</p>
