Touch Animations added

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,10 @@
                 <p class='arrows'>↓</p>
             </div>
         </div>
+        <div class="touch-scroll">
+            <div class="touched-scroll"></div>
+            <div class='inner-touch-scroll'></div>
+        </div>    
     </div>
 
     <div class='homepage'>
@@ -111,6 +115,10 @@
         <div class="move-mouse-div">
             <p>Passe o mouse pelas logos</p>
             <div class="mouse-move"></div>
+            <div class="touch-click">
+                <div class="touched-click"></div>
+                <div class='inner-touch-click'></div>
+            </div>
             <div class="tech-div">
                 <p>JS</p>
             </div>
