added type='_blank' on bruno's link

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <div class='warning-img-container'></div>
         <div class='load-bar-container'>
             <div class='load-snippets'>
-            <p class='load-texts'>Carregando</p>
+                <p class='load-texts'>Carregando</p>
             </div>
             <div class='load-bar'></div>
             <button class='exit-load-btn hide'>Decolar</button>
@@ -59,7 +59,7 @@
         <div class="touch-scroll">
             <div class="touched-scroll"></div>
             <div class='inner-touch-scroll'></div>
-        </div>    
+        </div>
     </div>
 
     <div class='homepage'>
@@ -82,9 +82,9 @@
         <div class='whoami-container spine-right'>
             <div class='whoami-wrapper'>
                 <h1 class="whoami-header">Sou</h1>
-                <p class="whoami-p">Desenvolvedor Júnior</p>    
+                <p class="whoami-p">Desenvolvedor Júnior</p>
                 <p class="whoami-p">Frontend em ambientes 3D e Backend</p>
-            </div>  
+            </div>
             <div class='spine'></div>
         </div>
         <div class='whoami-container'>
@@ -103,7 +103,8 @@
                     mais no meu tempo livre.
                 </p>
                 <p class='whoami-p'>
-                    Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts e intrigado pelo universo e biologia.
+                    Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts e intrigado pelo
+                    universo e biologia.
                 </p>
             </div>
             <div class='spine'></div>
@@ -128,47 +129,41 @@
     <div class='projects-container'>
         <div class='project-card'>
             <div class='spine-cards'></div>
-            <img
-                class='project-logo'
-                src="/static/imgs/coin.png">
+            <img class='project-logo' src="/static/imgs/coin.png">
             <div class='project-links'>
                 <H1 class='project-title '>Controle de Estoque de Leveduras</H1>
                 <p class='project-description '> Ferramenta de controle de estoque de leveduras da Coin Brewery</p>
 
                 <div class='project-btns'>
-                        <button class='btn-p ' id='coin-info'>+ informações</button>
+                    <button class='btn-p ' id='coin-info'>+ informações</button>
                 </div>
             </div>
         </div>
         <div class='project-card'>
             <div class='spine-cards'></div>
-            <img
-                class='project-logo'
-                src="/static/imgs/bioinformatizado.jpg">
+            <img class='project-logo' src="/static/imgs/bioinformatizado.jpg">
             <div class='project-links'>
                 <H1 class='project-title '>Bioinformatizado</H1>
-                <p class='project-description '> 
+                <p class='project-description '>
                     Blog pessoal para manter um registro e disseminar informações sobre biotecnologia
                 </p>
 
                 <div class='project-btns'>
-                        <button class='btn-p ' id='bioinformatizado-info'>+ informações</button>
+                    <button class='btn-p ' id='bioinformatizado-info'>+ informações</button>
                 </div>
             </div>
         </div>
         <div class='project-card'>
             <div class='spine-cards'></div>
-            <img
-                class='project-logo'
-                src="/static/imgs/bioinfo-project-logo.png">
+            <img class='project-logo' src="/static/imgs/bioinfo-project-logo.png">
             <div class='project-links'>
                 <H1 class='project-title '>Projeto de Bioinformática</H1>
-                <p class='project-description '> 
+                <p class='project-description '>
                     Projeto pessoal para implementação de ferramentas de bioinformática.
                 </p>
 
                 <div class='project-btns'>
-                        <button class='btn-p ' id ='bioinfo-project-info'>+ informações</button>
+                    <button class='btn-p ' id='bioinfo-project-info'>+ informações</button>
                 </div>
             </div>
         </div>
@@ -184,18 +179,21 @@
             <img class='modal-img-coin hide' src="/static/imgs/coin-leveduras.png">
             <img class='modal-img-coin hide' src="/static/imgs/coin-form.png">
 
-            <a class="modal-back" id='coin-back' >&#10094;</a>
-            <a class="modal-forward"id='coin-forward' >&#10095;</a>
+            <a class="modal-back" id='coin-back'>&#10094;</a>
+            <a class="modal-forward" id='coin-forward'>&#10095;</a>
         </div>
         <div class='modal-side'>
             <p class='modal-description'>
-                Ferramenta desenvolvida para auxiliar o laboratório a controlar o estoque de leveduras vivas para produção de cerveja artesanal
+                Ferramenta desenvolvida para auxiliar o laboratório a controlar o estoque de leveduras vivas para
+                produção de cerveja artesanal
             </p>
             <p class='modal-description'>
-                O software foi idealizado para facilitar o controle do histórico dos processo de repicagem. Também pela necessidade de facilidade de acesso as informações críticas sobre cada uma das cepas
+                O software foi idealizado para facilitar o controle do histórico dos processo de repicagem. Também pela
+                necessidade de facilidade de acesso as informações críticas sobre cada uma das cepas
             </p>
             <p class='modal-description'>
-                Obs: O site é proprietário portanto não posso permitir acesso, mas posso disponibilizar o código para visualização
+                Obs: O site é proprietário portanto não posso permitir acesso, mas posso disponibilizar o código para
+                visualização
             </p>
         </div>
         <div class='modal-tech'>
@@ -249,7 +247,8 @@
         </div>
         <div class='modal-side'>
             <p class='modal-description'>
-                Blog pessoal feito para eu manter um log sobre ferramentas e conceitos de bioinformática que estou aprendendo e disseminar o conteúdo em português
+                Blog pessoal feito para eu manter um log sobre ferramentas e conceitos de bioinformática que estou
+                aprendendo e disseminar o conteúdo em português
             </p>
         </div>
         <div class='modal-tech'>
@@ -282,10 +281,10 @@
                 </ul>
             </div>
         </div>
-        <a href='https://bioinformatizado.herokuapp.com/'target="_blank" rel="noopener noreferrer">
+        <a href='https://bioinformatizado.herokuapp.com/' target="_blank" rel="noopener noreferrer">
             <button class='modal-btn'>Acesse</button>
         </a>
-        <a href='https://github.com/RodrigoCury/DjangoBlog'target="_blank" rel="noopener noreferrer">
+        <a href='https://github.com/RodrigoCury/DjangoBlog' target="_blank" rel="noopener noreferrer">
             <button class='modal-btn'>Github</button>
         </a>
     </div>
@@ -306,10 +305,12 @@
         </div>
         <div class='modal-side'>
             <p class='modal-description'>
-                Playground pessoal para aplicar tecnologias de bioinformática e disponibilizar o acesso pra quem tiver interesse
+                Playground pessoal para aplicar tecnologias de bioinformática e disponibilizar o acesso pra quem tiver
+                interesse
             </p>
             <p class='modal-description'>
-                Sempre que aprendo uma tecnologia nova tento aplicar de maneira interessante neste site e assim reforçar o conhecimento
+                Sempre que aprendo uma tecnologia nova tento aplicar de maneira interessante neste site e assim reforçar
+                o conhecimento
             </p>
             <p class='modal-description'>
                 Obs: É Um projeto em constante Desenvolvimento e em breve o portarei do Flask para Django.
@@ -345,10 +346,10 @@
                 </ul>
             </div>
         </div>
-        <a href='https://bioinformatic-project.herokuapp.com/'target="_blank" rel="noopener noreferrer">
+        <a href='https://bioinformatic-project.herokuapp.com/' target="_blank" rel="noopener noreferrer">
             <button class='modal-btn'>Acesse</button>
         </a>
-        <a href='https://github.com/RodrigoCury/bioinformatic-project'target="_blank" rel="noopener noreferrer">
+        <a href='https://github.com/RodrigoCury/bioinformatic-project' target="_blank" rel="noopener noreferrer">
             <button class='modal-btn'>Github</button>
         </a>
     </div>
@@ -370,7 +371,7 @@
                 <li class='made-with-li'>Blender</li>
                 <li class='made-with-li'>Audacity</li>
             </ul>
-            <ul class='made-with-ul'id='made-with-trivia'>
+            <ul class='made-with-ul' id='made-with-trivia'>
                 <h2 class='made-with-header'>Desenvolvimento</h2>
                 <li class='made-with-li'>150+ Hrs desenvolvendo o conceito</li>
                 <li class='made-with-li'>100+ Horas codando</li>
@@ -378,36 +379,40 @@
                 <li class='made-with-li'>92 arquivos</li>
                 <li class='made-with-li'>Várias danças de comemoração</li>
             </ul>
-            <ul class='made-with-ul'id='made-with-music'>
+            <ul class='made-with-ul' id='made-with-music'>
                 <h2 class='made-with-header'>Músicas</h2>
                 <li class='made-with-li'>
                     'The Journey' por
-                    <a href="https://pixabay.com/users/astrofreq-19902647/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=2582" target="_blank" rel="noopener noreferrer">
+                    <a href="https://pixabay.com/users/astrofreq-19902647/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=2582"
+                        target="_blank" rel="noopener noreferrer">
                         astrofreq
-                    </a> 
-                    disponível em 
-                    <a href="https://pixabay.com/music/solo-guitar-the-journey-2582/"target="_blank" rel="noopener noreferrer">
+                    </a>
+                    disponível em
+                    <a href="https://pixabay.com/music/solo-guitar-the-journey-2582/" target="_blank"
+                        rel="noopener noreferrer">
                         Pixabay
                     </a>
                 </li>
                 <li class='made-with-li'>
                     'Dreamy Piano' por
-                    <a href="https://pixabay.com/users/winkingfoxmusic-18210509/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=4049" target="_blank" rel="noopener noreferrer">
+                    <a href="https://pixabay.com/users/winkingfoxmusic-18210509/?tab=audio&amp;utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=audio&amp;utm_content=4049"
+                        target="_blank" rel="noopener noreferrer">
                         WinkingFoxMusic
-                    </a> 
-                    disponível em 
-                    <a href="https://pixabay.com/music/modern-classical-dreamy-piano-soft-sound-ambient-background-4049/"target="_blank" rel="noopener noreferrer">
+                    </a>
+                    disponível em
+                    <a href="https://pixabay.com/music/modern-classical-dreamy-piano-soft-sound-ambient-background-4049/"
+                        target="_blank" rel="noopener noreferrer">
                         Pixabay
                     </a>
                 </li>
             </ul>
-            <ul class='made-with-ul'id='made-with-thanks'>
+            <ul class='made-with-ul' id='made-with-thanks'>
                 <h2 class='made-with-header'>Agradecimentos</h2>
                 <li class='made-with-li'>Amigos e Família pelo apoio e opiniões construtivas</li>
                 <li class='made-with-li'>
-                    <a href="https://bruno-simon.com/">
+                    <a href="https://bruno-simon.com/" target="_blank" rel="noopener noreferrer">
                         Bruno Simon
-                    </a> 
+                    </a>
                     pelo ótimo curso
                 </li>
             </ul>
@@ -427,7 +432,7 @@
         <img src="/static/imgs/mute/unmute-64.png" alt="" class='mute-btn'>
         <img src="/static/imgs/mute/mute-64.png" alt="" class='unmute-btn hide'>
     </div>
-    
+
 </body>
 
 </html>
