Added Best Experience Text

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
             <div class='load-bar'></div>
             <button class='exit-load-btn hide'>Decolar</button>
         </div>
+        <p class='exp-p'>Use Chrome em um Desktop para uma melhor experiência</p>
     </div>
 
     <canvas class="webgl-canvas"></canvas>
