minor text changes, div hidden before Load

--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,14 @@
             <div class='load-bar'></div>
             <button class='exit-load-btn hide'>Decolar</button>
         </div>
-        <p class='exp-p'>Use Chrome em um Desktop para uma melhor experiência</p>
+        <div class='exp-div'>
+            <p class='exp-p'>Use Chrome em um Desktop para uma melhor experiência</p>
+        </div>
     </div>
 
     <canvas class="webgl-canvas"></canvas>
 
-    <div class='welcome-container'>
+    <div class='welcome-container hide'>
         <h2 class='welcome-text'>Role para baixo ou use as teclas para explorar</h2>
         <div class='scroll-down-container'>
             <div class='scroll-down'></div>
@@ -63,7 +65,7 @@
         </div>
     </div>
 
-    <div class='homepage'>
+    <div class='homepage hide'>
         <div class='home'>
             <h1 class="home-text">Rodrigo Cury</h1>
         </div>
@@ -79,12 +81,12 @@
         </div>
     </div>
 
-    <div class='whoami'>
+    <div class='whoami hide'>
         <div class='whoami-container spine-right'>
             <div class='whoami-wrapper'>
                 <h1 class="whoami-header">Sou</h1>
                 <p class="whoami-p">Desenvolvedor Júnior</p>
-                <p class="whoami-p">Frontend em ambientes 3D e Backend</p>
+                <p class="whoami-p">Frontend e Backend</p>
             </div>
             <div class='spine'></div>
         </div>
@@ -92,7 +94,7 @@
             <div class='spine'></div>
             <div class='whoami-wrapper'>
                 <h1 class="whoami-header">Estudo</h1>
-                <p class="whoami-p">Biotecnologia na Universidade Federal de Uberlândia.</p>
+                <p class="whoami-p">Biotecnologia, UFU - Universidade Federal de Uberlândia.</p>
                 <p class="whoami-p">Autodidata em desenvolvimento Web e em modelagem 3D.</p>
             </div>
         </div>
@@ -104,7 +106,7 @@
                     mais no meu tempo livre.
                 </p>
                 <p class='whoami-p'>
-                    Desde pequeno fui apaixonado por Cinema, Animações, Livros, Música, Podcasts e intrigado pelo
+                    Desde criança fui apaixonado por Cinema, Animações, Livros, Música, Podcasts e intrigado pelo
                     universo e biologia.
                 </p>
             </div>
@@ -112,10 +114,10 @@
         </div>
     </div>
 
-    <div class='technologies-container'>
+    <div class='technologies-container hide'>
         <h1 class='tech-header'>Tecnologias</h1>
         <div class="move-mouse-div">
-            <p>Passe o mouse pelas logos</p>
+            <p class='tech-mouse-p'>Passe o mouse pelas logos</p>
             <div class="mouse-move"></div>
             <div class="touch-click">
                 <div class="touched-click"></div>
@@ -127,7 +129,7 @@
         </div>
     </div>
 
-    <div class='projects-container'>
+    <div class='projects-container hide'>
         <div class='project-card'>
             <div class='spine-cards'></div>
             <img class='project-logo' src="/static/imgs/coin.png">
@@ -355,7 +357,7 @@
         </a>
     </div>
 
-    <div class='made-with-container'>
+    <div class='made-with-container hide'>
         <div class='made-with-title'>
             <h1 class='dots'>...</h1>
             <h1>Portifólio</h1>
@@ -420,7 +422,7 @@
         </div>
     </div>
 
-    <div class='contact-container'>
+    <div class='contact-container hide'>
         <div class='contact-wrapper'>
             <h1 class='contact-header'>Obrigado por visitar</h1>
             <h2 class="contact-h2">Entre em contato comigo</h2>
