--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+    <!-- manifest -->
+    <link rel="manifest" href="/manifest.json">
 
     <title>Portifolio</title>
 </head>
@@ -174,7 +178,7 @@
     <div class='modal-bg hide' id='coin-modal'>
         <div class='modal-spine'></div>
         <div class='modal-top-row'>
-            <h1 class='modal-title'>Controle de estoque de leveduras | Coin Brewery</h1>
+            <h1 class='modal-title'>Controle de leveduras | Coin</h1>
             <button class='modal-quit' id='coin-quit'>Voltar</button>
         </div>
         <div class='modal-carousel'>
@@ -189,10 +193,6 @@
             <p class='modal-description'>
                 Ferramenta desenvolvida para auxiliar o laboratório a controlar o estoque de leveduras vivas para
                 produção de cerveja artesanal
-            </p>
-            <p class='modal-description'>
-                O software foi idealizado para facilitar o controle do histórico dos processo de repicagem. Também pela
-                necessidade de facilidade de acesso as informações críticas sobre cada uma das cepas
             </p>
             <p class='modal-description'>
                 Obs: O site é proprietário portanto não posso permitir acesso, mas posso disponibilizar o código para
@@ -214,12 +214,8 @@
                 <ul class='modal-ul'>
                     <li class='modal-li'>Auth</li>
                     <li class='modal-li'>Barra de busca</li>
-                    <li class='modal-li'>Filtros</li>
-                    <li class='modal-li'>Paginação</li>
-                    <li class='modal-li'>Avisos de repiques próximos</li>
-                    <li class='modal-li'>TODO para cada usuário</li>
+                    <li class='modal-li'>Filtros e Paginação</li>
                     <li class='modal-li'>Histórico de Atividades</li>
-                    <li class='modal-li'>Custom Tags</li>
                 </ul>
             </div>
             <div class='modal-ul-div production-ul'>
